# ag-path-tracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  floor.h  game.cpp  game.h  pathTracer.cpp  precomp.h  ray.cpp  sphere.cpp  surface.cpp  surface.h  template.cpp  template.h  tmpl_2018-01.vcxproj
